chore: remove Lovable traces, use local favicon
- Remove lovable-tagger from vite.config and package.json
- Replace external gpt-engineer favicon with local Rez logo (public/favicon.svg)
- Simplify Vite config (drop mode-based componentTagger)

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <meta name="twitter:title" content="Canvassing - Research Marketplace for Verified Participants">
     <meta property="og:description" content="Connect with verified African participants for surveys and product tests. Get quality research insights in days, not weeks with transparent Web3 payments.">
     <meta name="twitter:description" content="Connect with verified African participants for surveys and product tests. Get quality research insights in days, not weeks with transparent Web3 payments.">
-    <link rel="icon" type="image/svg+xml" href="https://storage.googleapis.com/gpt-engineer-file-uploads/i2tOUjxindak3JGhCNKAyIfsMof2/uploads/1767967805086-logo.svg">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   </head>
 
   <body>
